<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_birds"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_birds" />

</menu>
